--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   function delayedRedirect() {
     document.getElementById("waitMessage").style.display = "block"; // Show waiting message
     setTimeout(function() {
-      window.location.href = "nextpage.html"; // Redirect after 3 seconds
+      window.location.href = "page2.html"; // Redirect after 3 seconds
     }, 3000);
   }
 </script>
