--- a/page2.html
+++ b/page2.html
@@ -2,12 +2,23 @@
 <head>
   <title>one  step</title>
   <link rel="stylesheet" href="page2.css">
+   <script>
+        // Redirect back to index.html after 3 seconds
+        setTimeout(() => {
+            window.location.href = "page3.html"; 
+        }, 3000);
+    </script>
 </head>
 <body>
-  <video controls>
-  <source src="VID.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+  <div class="spinner">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+  
 
 </body>
 </html>
