--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
     </script>
   
-  <form action="last.html">
+  <form action="www.google.com">
   <button class="no" type="submit">No</button>
 </form>
 </body>
